# yama

./: Cargo.toml
src/: app.rs  config.rs  dbus.rs  event.rs  logging.rs  main.rs  orchestrator.rs  player.rs  sources.rs  tui.rs  ui.rs
src/client/: interface.rs  mod.rs  mpv.rs
src/client/local/: backend.rs  handler.rs  mod.rs
src/client/spotify/: backend.rs  handler.rs  mod.rs
src/client/youtube/: backend.rs  handler.rs  mod.rs
src/sources/: local.rs  mod.rs  youtube.rs
